feat: add stats settings and backups
